# statistical-alpha-signal-combination-backtesting

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sp100_constituents.csv  sp500_constituents.csv
notebooks/: 01_data_exploration.ipynb  02_factor_analysis.ipynb  03_signal_validation.ipynb  04_alpha_research.ipynb
src/qre/: __init__.py
src/qre/alpha/: __init__.py  base.py  combination.py
src/qre/alpha/factors/: __init__.py  bollinger.py  cross_sectional_momentum.py  low_vol.py  momentum.py  quality.py  residual_momentum.py  rolling_cvar.py  rolling_max_drawdown.py  rolling_sharpe.py  rolling_skewness.py  rsi.py  sector_neutral_momentum.py  short_term_reversal.py
src/qre/analytics/: __init__.py  ic.py  metrics.py  multi_factor_ic.py  tearsheet.py
src/qre/analytics/validation/: __init__.py  diagnostics.py  report.py
src/qre/backtest/: __init__.py  vectorized.py
src/qre/core/: types.py
src/qre/data/: alpaca_client.py  alphavantage.py  fundamentals_daily.py  historical.py  universe.py
tests/unit/: test_alpha.py  test_backtest.py  test_combination.py  test_diagnostics.py  test_ic.py  test_metrics.py  test_new_factors.py  test_report.py
