[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statistical-alpha-combination"
version = "1.0.0"
description = "Statistical alpha signal combination and robust backtesting for US equities"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=17.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "alpaca-py>=0.30",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "jupyterlab>=4.0",
    "pandas-stubs>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qre"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
